resolve css overflow/ws conflicts

--- a/src/components/Task.css
+++ b/src/components/Task.css
@@ -11,7 +11,7 @@
   /* adding a third auto makes the end of the line move back left */
 
   text-overflow: ellipsis;
-  overflow-x: hide;
+  /* max-height: 20.8; */
 }
 
 
@@ -34,7 +34,8 @@
 
 .task__title {
   text-overflow: ellipsis;
-  overflow: hidden;
+  overflow-x: hidden;
+  white-space: nowrap;
 }
 
 .task__done {
